--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/project-awesome/paq-fr-change-of-base#readme",
   "devDependencies": {
+    "ajv": "^3.8.3",
     "chai": "^3.4.0",
     "mocha": "^2.3.3",
     "sinon": "^1.17.2"
