Refactored question generation and testing.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ajv": "^3.8.3",
     "chai": "^3.4.0",
     "mocha": "^2.3.3",
+    "random-bits": "git+https://git@github.com/project-awesome/pa-random-bits.git#v1.0.0",
     "sinon": "^1.17.2"
   }
 }
