--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "paq-fr-change-of-base",
+  "name": "paq-change-of-base",
   "version": "0.0.0",
-  "description": "Project Awesome Question, Change of Base, Free Response",
+  "description": "Project Awesome Question, Change of Base",
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/project-awesome/paq-fr-change-of-base.git"
+    "url": "git+https://github.com/MichelleCraig/paq-change-of-base.git"
   },
   "author": "Phill Conrad <pconrad@cs.ucsb.edu> (https://foo.cs.ucsb.edu/pawiki)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/project-awesome/paq-fr-change-of-base/issues"
+    "url": "https://github.com/project-awesome/paq-change-of-base/issues"
   },
-  "homepage": "https://github.com/project-awesome/paq-fr-change-of-base#readme",
+  "homepage": "https://github.com/project-awesome/paq-change-of-base#readme",
   "devDependencies": {
     "ajv": "^3.8.3",
     "chai": "^3.4.0",
